--- a/src/scss/adaptive.scss
+++ b/src/scss/adaptive.scss
@@ -57,6 +57,7 @@
 	}
 	.abon {
 		padding: 45px 0;
+		
 	}
 	.benefits__title {
 		font-size: 1.313rem;
@@ -69,6 +70,7 @@
 	}
 	.howto__adaptive {
 		margin-bottom: 1rem;
+		justify-content: center;
 	}
 	.howto__wrapimg {
 		width: 100%;
@@ -76,7 +78,7 @@
 			width: 100%;
 		}
 		img {
-			margin: 0 auto;
+			margin: 10px auto;
 			display: block;
 		}
 	}
@@ -107,13 +109,14 @@
 		padding-bottom: 465px;
 	}
 	.howto__dog {
-		bottom: -554px;
+		bottom: -524px;
 		width: 295px;
-		right: 15px;
+		right: 50%;
+		transform: translate(50%);
 	}
 	.col50 {
-		padding-right: 0;
-		padding-left: 0;
+		padding-right: 15px;
+		padding-left: 15px;
 	}
 	.header__menu {
 		display: none;
@@ -131,8 +134,8 @@
 		}
 	}
 	.benefits__subtitle {
-		font-size: 0.8rem;
-		line-height: 1.2rem;
+		font-size: 0.875rem;
+    	line-height: 1.1rem;
 		margin-bottom: 8px;
 	}
 	.slider-top__wrapper {
@@ -179,11 +182,79 @@
 	}
 	.cat {
 		position: absolute;
-    bottom: -26px;
-    right: calc(50% - 106px);
-    width: 212px;
+		bottom: -26px;
+		right: calc(50% - 106px);
+		width: 212px;
 	}
 	.benefits .container {
-		padding-bottom: 100%;
+		padding-bottom: 120%;
+	}
+	.howto__list-item {
+		width: 100%;
+		margin-right: 0 !important;
+	}
+	.feedback {
+		padding: 40px 0;
+	}
+	.header {
+		height: 50px;
+	}
+	.headerbtn {
+		font-size: 8px;
+		width: 139px !important;
+		height: 36px !important;
+	}
+	.header__mobile-burger {
+		display: flex;
+	}
+	.header .container {
+		max-width: 100%;
+	}
+	.consult {
+		padding: 40px 0;
+	}
+	.ourvet {
+		padding: 40px 0;
+	}
+	.benefits {
+		padding-top: 40px;
+	}
+	.howto {
+		padding: 40px 0;
+	}
+	.cat__monolog {
+		width: 201px;
+    height: 187px;
+    background-size: cover;
+    right: unset;
+    top: unset;
+    bottom: 180px;
+    left: 50%;
+    transform: translate(-50%);
+	}
+	.cat__text {
+		top: 42px;
+		font-size: 1rem;
+	}
+	.benefits__title {
+		margin-bottom: 40px;
+	}
+	.button {
+		padding-top: 0;
+	}
+	.padapt {
+		padding: 0;
+	}
+	.col50 {
+		margin-bottom: 28px;
+	}
+}
+@media (max-width: 375px) {
+	.header__logo {
+		width: 30%;
+		img {
+			max-width: 100%;
+			height: auto;
+		}
 	}
 }
