--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,16 +37,57 @@ body {
 .centerit {
 	margin: 0 auto;
 }
-
+.ovfh {
+	overflow: hidden;
+}
 .header {
 	display: flex;
 	position: fixed;
 	height: 70px;
-	background-color: white;
+	background-color: #ffffff;
 	align-items: center;
 	width: 100%;
 	z-index: 1000;
 	top: 0;
+	&__mobile-burger {
+		display: none;
+		flex-wrap: wrap;
+		align-items: center;
+		padding-left: 20px;
+
+	}
+	&__mobile-menu-list {
+		position: fixed;
+		top: 50px;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background-color: white;
+		padding: 69px 24px;
+		display: none;
+		&.menu-on {
+			display: block;
+		}
+	}
+	&__mobile-link {
+		color: #272727;
+		font-size: 18px;
+		font-weight: 400;
+		font-family: 'Montserrat', sans-serif;
+		text-decoration: none;
+		line-height: 4rem;
+		&:hover {
+			color: #47c4f3;
+		}
+		&:active {
+			color: #47c4f3;
+		}
+	}
+	&__mobile-close {
+		position: absolute;
+		top: 41px;
+		right: 18px;
+	}
 	&.active {
 		box-shadow: 0 0 16px #00000040;
 	}
@@ -259,17 +300,17 @@ body {
 }
 .ourvet {
 	padding: 95px 0 119px 0;
-	background-color: #f4f4f4;
+	background-color: #ffffff;
 	&__card {
 		width: 340px;
-		background-color: white;
+		background-color: #f8f8f8;
 		border-radius: 10px;
 		position: relative;
 		padding: 0 26px;
 		padding-bottom: 23px;
 		margin-right: 25px;
 		box-shadow: 0 0.125rem 0.563rem 0.063rem rgba(195, 195, 195, 0.1);
-		opacity: 0.6;
+		opacity: 0.8;
 		transition: 333ms;
 		&:before {
 			content: "";
@@ -377,6 +418,7 @@ body {
 }
 .abon {
 	padding: 104px 0 96px 0;
+	background-color: #f4f4f4;
 	.benefits__title {
 		margin-bottom: 53px;
 	}
@@ -501,7 +543,6 @@ body {
 }
 .use {
 	padding: 94px 0 0 0;
-	background-color: #f4f4f4;
 	.benefits__title {
 		margin-bottom: 92px;
 	}
@@ -536,6 +577,7 @@ body {
 }
 .feedback {
 	padding: 92px 0 84px 0;
+	background-color: #f4f4f4;
 	.benefits__title {
 		margin-bottom: 59px;
 	}
@@ -551,7 +593,7 @@ body {
 	transition: 500ms !important;
 	padding: 30px 15px 20px;
 	position: relative;
-	background-color: #f4f4f4;
+	background-color: #ffffff;
 	width: 350px;
 	overflow: hidden;
 	border-radius: 10px;
@@ -671,28 +713,28 @@ body {
 	}
 }
 .howto {
+	padding: 84px 0 10px 0;
 	.container {
 		position: relative;
 	}
-	padding: 84px 0 10px 0;
 	.benefits__title {
 		margin-bottom: 73px;
-
 	}
 	&__wrapimg {
-		width: 68px;
-		height: 70px;
+		width: 15%;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
-		align-items: center;
-		margin-bottom: 15px;
+		// align-items: center;
+		// margin-bottom: 15px;
 	}
 	&__icon {
 		margin-bottom: 13px;
 	}
 	&__info {
-		padding-left: 34px;
+		padding-left: 50px;
+		width: 85%;
+		padding-top: 40px;
 	}
 	&__title {
 		color: #3c3c3c;
@@ -718,6 +760,10 @@ body {
 		padding: 12px 27px 12px 32px;
 		border-radius: 10px;
 		margin-bottom: 11px;
+		width: 49%;
+		&:nth-child(odd){
+			margin-right: 11px;
+		}
 	}
 	&__list-img {
 		margin-right: 57px;
@@ -745,6 +791,9 @@ body {
 		right: 0;
 		bottom: 0;
 	}
+	&__adaptive {
+		margin-bottom: 1.5rem;
+	}
 }
 .mb56 {
 	margin-bottom: 56px;
@@ -754,7 +803,7 @@ body {
 }
 .button {
 	padding-top: 30px;
-	padding-bottom: 120px;
+	padding-bottom: 64px;
 	.subscribe {
 		margin: 0 auto;
 	}
@@ -804,4 +853,8 @@ body {
 	font-size: 0.875rem;
 	font-weight: 300;
 	line-height: 2.593rem;
+}
+.consult {
+	padding: 115px 0 120px 0;
+	background-color: #f4f4f4;	
 }
