--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -371,7 +371,7 @@ body {
 	width: 100%;
 	padding-right: 15px; padding-left: 15px;
 }
-.slider-ourvet {
+.ourvet {
 	position: relative;
 	.bx-controls-direction {
 		display: flex;
