--- a/src/scss/adaptive.scss
+++ b/src/scss/adaptive.scss
@@ -135,7 +135,7 @@
 	}
 	.benefits__subtitle {
 		font-size: 0.875rem;
-    	line-height: 1.1rem;
+		line-height: 1.1rem;
 		margin-bottom: 8px;
 	}
 	.slider-top__wrapper {
@@ -171,10 +171,10 @@
 	.slider-top-wrap .bx-default-pager {
 		position: absolute;
 		bottom: 122px;
-		left: auto;
-		width: 100%;
+		left: 50%;
 		display: flex;
 		justify-content: center;
+		transform: translateX(-50%);
 	}
 	.benefits__description {
 		font-size: 0.688rem;
@@ -195,6 +195,7 @@
 	}
 	.feedback {
 		padding: 40px 0;
+		padding-bottom: 100px;
 	}
 	.header {
 		height: 50px;
@@ -215,6 +216,7 @@
 	}
 	.ourvet {
 		padding: 60px 0;
+		padding-bottom: 100px;
 	}
 	.benefits {
 		padding-top: 40px;
@@ -224,13 +226,13 @@
 	}
 	.cat__monolog {
 		width: 201px;
-    height: 187px;
-    background-size: cover;
-    right: unset;
-    top: unset;
-    bottom: 180px;
-    left: 50%;
-    transform: translate(-50%);
+		height: 187px;
+		background-size: cover;
+		right: unset;
+		top: unset;
+		bottom: 180px;
+		left: 50%;
+		transform: translate(-50%);
 	}
 	.cat__text {
 		top: 42px;
@@ -268,6 +270,45 @@
 	}
 	.ourvet__description {
 		font-size: 11px;
+	}
+	.feedback .bx-controls-direction {
+		top: unset;
+		bottom: 20px;
+		max-width: 100%;
+		left: 0;
+	}
+	.ourvet .bx-default-pager {
+		bottom: 25px;
+	}
+	.ourvet .bx-controls-direction {
+		top: unset;
+		bottom: 20px;
+		width: 100%;
+		max-width: 100%;
+		left: 0;
+	}
+	.ourvet .bx-viewport {
+		overflow: visible !important;
+	}
+	.feedback .bx-viewport {
+		overflow: visible !important;
+	}
+	.ourvet__card {
+		height: 300px;
+	}
+	.ourvet__photo {
+		width: 147px;
+	}
+	.ourvet__name {
+		font-size: 15px;
+		margin-bottom: 18px;
+		line-height: 17.71px;
+	}
+	.ourvet__description {
+		line-height: 1.3;
+	}
+	.ourvet__popup {
+		font-size: 12px;
 	}
 }
 @media (max-width: 375px) {
